ProgramTests/Invalid_Tests/loc_invalidArrayAccess.decaf
def int main() {
    int invalid[100];
    invalid[] = 100;
    invalid = 100;

    return 0;
}